# synlogos-coding-agent

./: .gitignore  README.md  SOUL.md  _exec.py  calculator.py  debug_agent.py  memory.md  pyproject.toml  skills.md  synlogos.example.json  test_agent_quick.py  test_setup.py
.devcontainer/: Dockerfile  devcontainer.json
src/: __init__.py  cli.py  config.py  main.py  metrics.py  protocols.py  skills.py  types.py
src/agent/: __init__.py  synlogos.py
src/providers/: anthropic_provider.py  functional_provider.py  groq_provider.py  ollama_provider.py  unified_provider.py
src/sandbox/: local_sandbox.py  programmatic_tools.py
src/tools/: __init__.py  advanced_tools.py  functional_tools.py  git_tools.py  semantic_search.py
tests/: test_agent.py  test_token_tracking.py
