[project]
name = "synlogos"
version = "0.1.0"
description = "AI coding agent with TogetherAI - Your autonomous coding companion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.21.0",
    "docker>=7.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "returns>=0.22.0",
    "aiofiles>=24.0.0",
]

[project.scripts]
synlogos = "src.cli:run"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.3.0", "mypy>=1.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
